# netbox-otnfaults

./: .gitignore  AGENTS.md  GEMINI.md  GPS功能实现总结.md  MANIFEST.in  PLAN.md  PLAN_tmp_view.txt  README.md  TODO.md  branch_err.txt  cable_err_2.txt  debug_import.py  debug_path_group.py  diagnose_forms.py  err_color.txt  err_height.txt  err_kpi_color.txt  err_simple.txt  fix_anchors.py  fix_service_anchors.py  forms_diff_utf8.txt  journal功能实现总结.md  patch.py  patch2.py  pyproject.toml  replace_script.py  setup.py  test_comments_functionality.py  test_edit_template_out.txt  test_err.txt  test_failures.txt  test_fix.py  test_gps_functionality.py  test_journal_functionality.py  test_new_fault_fields.py  test_tags_functionality.py  validate_fields.py  地图.md  新故障字段功能实现总结.md  标签字段功能实现总结.md  (+1 more)
.tmp_test_artifacts/: circuit-services-081df971b90141d7af71c1b9d85a4f3a.xlsx  circuit-services-2a8a47ecd33a406886454077031e0883.xlsx  circuit-services-3687ea8c9854456eb9c603a9926127e7.xlsx  circuit-services-3f116f98b0d4419792fe73cc660c1224.xlsx  circuit-services-6877ab71236a443a8ee84b8084a8ce84.xlsx  circuit-services-7737ab7413804a28b330e227081ba5e4.xlsx  circuit-services-faf1577efb6f49e08f1508ed04c47522.xlsx  dashboard.pyc.2005364157504  statistics_views.pyc.2365605481808
PRD/: BareFiberService_FaultImpacts_Plan.md  BareFiberService_FaultImpacts_Stats_Plan.md  BareFiberService_Fields_PRD.md  Map_Coordinate_Alignment_PRD.md  Map_Province_Border_Style.md  OTN_Fault_Map_Performance_Optimization.md  Update_CableType_Choices_Plan.md  add_cutover_type_field.md  add_heavyduty_type_field.md  add_loading_indicator_plan.md  add_re_cutover_field.md  arcgis_import_script.md  auto_cutover_status_on_cutover_save.md  auto_cutover_status_on_cutover_save_fix.md  bare_fiber_fault_detail_add_fields_prd.md  border_requirement.md  branch_company_performance_annual_stats_ui_redesign.md  branch_company_performance_cards_gap_fix_prd.md  branch_company_performance_cards_ui_refinement.md  branch_company_performance_metrics_refinement.md  business_interruption_card_implementation.md  change_plugin_icon_prd.md  change_to_thousand_kilometers.md  circuit_service_sorting_plan.md  color_picker_menu_disappear_fix_plan.md  cutover_detail_map_button_prd.md  cutover_impact_az_default_prd.md  cutover_impact_implementation_plan.md  cutover_impact_integration_prd.md  cutover_impact_permission_check.md  cutover_implemented_statistics_alignment_plan.md  cutover_implemented_statistics_alignment_walkthrough.md  cutover_management_unit_autofill_prd.md  cutover_manager_auto_assignment_prd.md  cutover_map_markers_prd.md  cutover_modal_time_default_zero_prd.md  cutover_planned_time_default_zero_prd.md  cutover_planned_time_sync.md  cutover_position_field_order_adjustment.md  cutover_province_filter_a_site_prd.md  (+70 more)
artifacts/: dispatch-icon-preview.html
docs/: 3d-buildings-implementation.md  model_description.md  notebooklm_otnfaults_demo.md  todo20263.13.md  地图弹窗淡入淡出动画实现.md  路径组需求.md
netbox_otnfaults/: __init__.py  dashboard.py  dashboard_topology.py  dashboard_views.py  filtersets.py  fix_html.py  forms.py  map_modes.py  models.py  navigation.py  signals.py  statistics_period.py  statistics_views.py  tables.py  template_content.py  urls.py  utils.py  view_mixins.py  views.py  weekly_report_summary.py  weekly_report_views.py
netbox_otnfaults.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: diagnose_route_service.py  filter_highways.py  import_arcgis_sites.py  refresh_pmtiles.sh  simplify_highways.py  statistics_auth_proxy.py  validate_otn_path_data.py
tests/: test_circuit_service_external_business.py  test_circuit_service_extra_fields.py  test_cutover_edit_template.py  test_cutover_generate_fault_plan.py  test_cutover_legacy_migrations.py  test_cutover_management_scaffold.py  test_cutover_map_default.py  test_cutover_map_icon.py  test_cutover_status_auto_set.py  test_dashboard_active_fault_scope.py  test_dashboard_calendar_widget.py  test_dashboard_cutover_calendar_widget.py  test_dashboard_fault_focus_site_labels.py  test_dashboard_fault_focus_zoom.py  test_dashboard_fault_path_pairs.py  test_dashboard_fault_status_colors.py  test_dashboard_green_network_layers.py  test_dashboard_health_summary.py  test_heavy_duty.py  (+93 more)
(+238 files in other folders)
