[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-otnfaults"
version = "0.1"
authors = [
  { name="Your Name", email="your.email@example.com" },
]

description = "OTN Network Fault Registration plugin for Netbox"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    'Django',
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

[project.optional-dependencies]
dev = ["check-manifest", "ruff"]

[project.urls]
"Homepage" = "https://github.com/your-username/netbox-otnfaults"
"Bug Tracker" = "https://github.com/your-username/netbox-otnfaults/issues"

[tool.setuptools]
packages = [
    "netbox_otnfaults",
]
package-data = { "netbox_otnfaults" = ["**/*", "templates/**"] }
exclude-package-data = { netbox_otnfaults = ["tests/*"] }
license-files = ["LICENSE"]
